# printalyzer-timer

./: README.md
docs/: ft260_eeprom_densistick.xml  ft260_eeprom_meterprobe.xml
docs/cube/: printalyzer-cube.ioc  printalyzer-cube.txt  printalyzer-timer.ioc  printalyzer-timer.txt
enclosure/: models.md
enclosure/base-unit/: Back.fpd  Bottom.fpd  base-flat.dxf  base-unit.md  base-unit.step  cover-flat.dxf  enclosure-base-flat.dxf  enclosure-base.step  enclosure-cover-flat.dxf  enclosure-cover.step  enclosure-full.step  encoder-spacer.stl
enclosure/densistick/: densistick-body.3mf  densistick-body.stl  densistick-cover.3mf  densistick-cover.stl  densistick-enclosure.step  densistick-overlay.dxf  lower-filter-ring.3mf  lower-filter-ring.stl  sensor-board-cover.3mf  sensor-board-cover.stl  upper-filter-ring.dxf
enclosure/jigs/: jig-main-board-buttons.stl  jig-main-board-leds.stl  jig-main-board-platform-1.stl  jig-main-board-platform-2.stl  jig-power-board-1.stl  jig-power-board-2.stl  jig-power-board-platform.stl  jigs.md
enclosure/meter-probe/: meter-probe-bottom.3mf  meter-probe-bottom.stl  meter-probe-enclosure.step  meter-probe-top-front.dxf  meter-probe-top.3mf  meter-probe-top.stl  meter-probe.md  meter-probe.step
hardware/: .gitignore  Makefile
hardware/densistick/: .gitignore  bom.ini  densistick-panelize.json  densistick.kicad_pcb  densistick.kicad_prl  densistick.kicad_pro  densistick.kicad_sch  fp-lib-table  ibom.config.ini  sym-lib-table
hardware/main-board/: fp-lib-table  ibom.config.ini  main-board-cache.lib  main-board-front.kicad_sch  main-board-front.sch  main-board-input.kicad_sch  main-board-input.sch  main-board-panelize.json  main-board-power.kicad_sch  main-board-power.sch  main-board.kicad_pcb  main-board.kicad_prl  main-board.kicad_pro  main-board.kicad_sch  main-board.pro  main-board.sch  sym-lib-table
hardware/meter-probe/: meter-probe-cache.lib  meter-probe-panelize.json  meter-probe.kicad_pcb  meter-probe.kicad_prl  meter-probe.kicad_pro  meter-probe.kicad_sch  meter-probe.pro  meter-probe.sch  sym-lib-table
hardware/meter-probe-tsl2521/: fp-lib-table  ibom.config.ini  meter-probe-tsl2521.kicad_pcb  meter-probe-tsl2521.kicad_prl  meter-probe-tsl2521.kicad_pro  meter-probe-tsl2521.kicad_sch  sym-lib-table
hardware/misc/: kicost-bom.xslt
hardware/power-board/: bom.ini  fp-lib-table  ibom.config.ini  power-board-panelize.json  power-board.kicad_dru  power-board.kicad_pcb  power-board.kicad_prl  power-board.kicad_pro  sym-lib-table  (+1 more)
models/: Back.fpd  Front.fpd  Top.fpd  meter-probe-bottom.3mf  meter-probe-bottom.stl  meter-probe-top-front.dxf  meter-probe-top-rear.dxf  meter-probe-top.3mf  meter-probe-top.stl  meter-probe.step  models.md  printalyzer-enclosure.pda
software/: LICENSE
software/bootloader/: .cproject  .gitignore  .project  CMakeLists.txt  STM32F411RETX_FLASH.ld  STM32F446RETX_FLASH.ld  makefile.defs
software/bootloader/src/: FreeRTOSConfig.h  app_descriptor.h  board_config.h  bootloader.c  bootloader.h  bootloader_task.c  bootloader_task.h  display.c  display.h  display_assets.c  display_assets.h  fatfs.c  fatfs.h  keypad.c  keypad.h  logger.c  logger.h  main.c  usb_config.h  usb_host.c  usb_host.h  usb_msc_fatfs.c  usb_msc_fatfs.h
software/bootloader/src/drivers/: i2c_util.h  m24m01.c  m24m01.h  tca8418.c  tca8418.h  u8g2_stm32_hal.c  u8g2_stm32_hal.h
software/bootloader/src/system/: stack_check.c  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  stm32f4xx_it.h  syscalls.c  sysmem.c
software/firmware/: .cproject  .gitignore  .project  CMakeLists.txt  STM32F411RETX_FLASH.ld  STM32F411RETX_RAM.ld  STM32F446RETX_FLASH.ld  makefile.defs  makefile.targets
software/firmware/src/: FreeRTOSConfig.h  app_descriptor.c  app_descriptor.h  board_config.h  bsdlib.h  buzzer.c  buzzer.h  contrast.c  contrast.h  core_json.h  densistick_settings.c  densistick_settings.h  densitometer.c  densitometer.h  display.c  display.h  display_assets.c  display_assets.h  display_internal.c  display_internal.h  display_segments.c  display_segments.h  dmx.c  dmx.h  enlarger_calibration.c  enlarger_calibration.h  enlarger_config.c  enlarger_config.h  enlarger_control.c  enlarger_control.h  enlarger_profile.c  enlarger_profile.h  exposure_state.c  exposure_state.h  exposure_timer.c  exposure_timer.h  fatfs.c  fatfs.h  file_picker.c  file_picker.h  (+73 more)
software/firmware/src/display/: display_assets.c  display_assets.h  display_internal.c  display_internal.h  display_segments.c  display_segments.h
software/firmware/src/drivers/: aw9523.c  aw9523.h  i2c_interface.c  i2c_interface.h  i2c_util.c  m24c02.c  m24c02.h  m24c08.c  m24c08.h  m24m01.c  m24m01.h  pam8904e.c  pam8904e.h  stp16cpc26.c  stp16cpc26.h  tca8418.c  tca8418.h  tcs3472.c  tcs3472.h  tsl2585.c  tsl2585.h  u8g2_stm32_hal.c
software/firmware/src/menu/: main_menu.c  main_menu.h  menu_diagnostics.c  menu_enlarger.c  menu_enlarger.h  menu_firmware.c  menu_import_export.c  menu_meter_probe.c  menu_paper.c  menu_paper.h  menu_safelight.c  menu_safelight.h  menu_settings.c  menu_settings.h  menu_step_wedge.c  menu_step_wedge.h
software/firmware/src/peripheral/: dens_remote.c  dens_remote.h  densistick_settings.c  densistick_settings.h  meter_probe.c  meter_probe.h  meter_probe_settings.c  meter_probe_settings.h
software/firmware/src/system/: stack_check.c  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  stm32f4xx_it.h  syscalls.c  sysmem.c  system_stm32f4xx.c
software/firmware/src/usb/: ft260.c  ft260.h  usb_config.h  usb_ft260.c  usb_ft260.h  usb_hid_keyboard.c  usb_host.c  usb_host.h  usb_msc_fatfs.c  usb_msc_fatfs.h  usb_serial.c  usb_serial.h
software/firmware/src/usb/class/: usbh_serial_cdc_acm.c  usbh_serial_cdc_acm.h  usbh_serial_ch34x.c  usbh_serial_ch34x.h  usbh_serial_class.c  usbh_serial_class.h  usbh_serial_cp210x.c  usbh_serial_cp210x.h  usbh_serial_ftdi.c  usbh_serial_ftdi.h  usbh_serial_pl2303.c  usbh_serial_pl2303.h
software/firmware/tools/: checksum.pl  codesize.pl  import-cube.sh
(+41 files in other folders)
